--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -29,7 +29,7 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
         <h1>About Us</h1>
-        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
+        Welcome to Best Cars Dealership, home to the finest vehicles in North America. We offer a wide selection of domestic and imported cars at competitive prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
